# pipeline-task-automation

./: README.md  comparison_tasks.md  requirements.txt
agentcompiler/: compiler.py  evaluation.py  json_to_csv.py  main.py  orchestrator.py  utils.py
agentcompiler/models/: agent.py  agent_execution_step.py  orchestrator.py
agentcompiler/v2/: abstract_agent.py  agent_models.py  main_2.py  orchestrator.py  settings.py
agents/customer_support_automation/: agents.json  agents.yaml
agents/customer_support_crew_ai/: agents.json
agents/research_paper/: agents.json
crew_ai/latest_ai_development/: pyproject.toml
crew_comparison/: README.md  pyproject.toml
crew_comparison/src/crew_comparison/: crew.py  customer_support_crew.py  evaluation.py  main.py  research_crew.py
crew_comparison/src/crew_comparison/config/: agents.yaml  customer_support_tasks.yaml  research_agents.yaml  research_tasks.yaml
crew_comparison/src/crew_comparison/tools/: email_ingestion_tool.py  escalation_decision_tool.py  faq_lookup_tool.py  paper_crawler_tool.py  report_generator_tool.py  sentiment_analysis_tool.py  summarization_tool.py  text_extraction_tool.py  topic_classifier_tool.py
dataset/: customer_support.csv  customer_support.json  customer_support_agent_compiler.json  customer_support_crew_ai.json  research_paper.csv  research_paper.json  research_paper_agent_compiler.json  research_paper_crew_ai.json
langgraph/: graph.py  main.py  multi_agents.py  tools.py
multi_agent_system/: DEVELOPMENT_CHOICES.md  README.md  agents.py  pipeline.py
(+5 files in other folders)
