[project]
name = "crew_comparison"
version = "0.1.0"
description = "crew_comparison using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0"
]

[project.scripts]
crew_comparison = "crew_comparison.main:run"
run_crew = "crew_comparison.main:run"
train = "crew_comparison.main:train"
replay = "crew_comparison.main:replay"
test = "crew_comparison.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
